Fruitless tweaks